...
                                .padding(top = 10.dp)
                    ) {
                        SegmentedButton(
                            selected = !state.exactWord,
                            onClick = { viewModel.setExactWord(false) },
                            shape = SegmentedButtonDefaults.itemShape(index = 0, count = 2)
                        ) { Text("Mendekati") }
                        SegmentedButton(
                            selected = state.exactWord,
                            onClick = { viewModel.setExactWord(true) },
                            shape = SegmentedButtonDefaults.itemShape(index = 1, count = 2)
                        ) { Text("Terperinci") }
                    }
                }
            }
        }
    ) { padding ->
        Column(
...
